# scratch

./: Cargo.toml
assets/defs/: abilities.ron  actors.ron  items.ron  levels.ron  matter.ron  projectiles.ron
assets/models/: cursor.glb
data/: controls.ron  settings.ron
src/: main.rs
src/game/: mod.rs
src/game/ability/: mod.rs
src/game/generics/: game_time.rs  lifetime.rs  mod.rs
src/game/gui/: binding.rs  button.rs  context.rs  mod.rs  quickslots.rs  worldspace.rs
src/game/level/: daytime.rs  editor.rs  generator.rs  mod.rs  spawner.rs
src/game/player/: designator.rs  input.rs  marker.rs  mod.rs  orderer.rs  quickslots.rs  select.rs  selector.rs
src/game/unit/: actioner.rs  actions.rs  body.rs  controller.rs  mod.rs  mover.rs  orderable.rs  selectable.rs  velocity.rs
src/game/unit/state/: mod.rs
src/game/unit/state/property/: health.rs  mana.rs  mod.rs  stamina.rs
src/game/util/: app_state.rs  asset_loader.rs  audio_player.rs  bitmask.rs  data.rs  defs.rs  mod.rs  random.rs  settings.rs
src/game/util/camera/: look_angles.rs  look_transform.rs  mod.rs  orbit.rs
src/game/util/path/: astar.rs  mod.rs
src/game/util/vdt/: accessor.rs  internal.rs  leaf.rs  mesh.rs  mod.rs  root.rs  voxel.rs
