[package]
name = "scratch"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = [
    # Default Features:
    "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    
    # Default Render:
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",

    # Default Formats:
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",

    # Default Stuff:
    "x11",
    "filesystem_watcher",
    "android_shared_stdcxx",
    "tonemapping_luts",

    # Other Features:
    # "dynamic_linking",
    "serialize",
    #   "trace",

    # Other Formats:
    "tga",

    # Other Stuff:
    "wayland",
]

[dependencies]
winit = { version = "0.28" }
image = { version = "0.24" }

bevy_kira_audio = "0.15.0"
bevy_rapier3d = { version = "0.21.0", features = ["debug-render"] }
bevy_hanabi = "0.6"
big-brain = "0.17.0"
leafwing-input-manager = "0.9.2"

bevy-inspector-egui = "0.18.0"
bevy_mod_gizmos = "0.4.0"

pathfinding = "4.2.1"
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
serde = "1.0.156"
ron = "0.8.0"
bincode = "1.3.3"
block-mesh = "0.2.0"
noise = "0.8.2"